<resources>
    <string name="app_name">Creches</string>
    <string name="title_activity_login">Connexion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Amine -->
    <string name="news">Fil d\'actualité</string>
    <string name="food">Menu</string>
    <string name="tuitions">Mes paiements</string>
    <string name="callendar">Calendrier</string>
    <string name="events">Evènements</string>
    <string name="homework">Travail à faire</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="given">Given the </string>
    <string name="signout">Switch accounts</string>
    <string name="meal1">Breakfast</string>
    <string name="meal2">Lunch</string>
    <string name="meal3">Snack</string>
    <string name="health">Santé</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="apptitle">AlQualem</string>
    <string name="fullcallendar">full calendar</string>
    <string name="payment_status_true">paid</string>
    <string name="payment_status_false">unpaid</string>

</resources>
