<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/iconsnews"
        android:title="@string/news"/>
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/iconsnotification"
        android:title="@string/events"/>
    <item
        android:id="@+id/nav_food"
        android:icon="@drawable/iconsfood"
        android:title="@string/food"/>
    <item
        android:id="@+id/nav_homework"
        android:icon="@drawable/iconsbook"
        android:title="@string/homework"/>
    <item
        android:id="@+id/nav_callendar"
        android:icon="@drawable/iconscalendar"
        android:title="@string/callendar"/>
    <item
        android:id="@+id/nav_tuitions"
        android:icon="@drawable/iconsmoney"
        android:title="@string/tuitions"/>
    <item
        android:id="@+id/nav_health"
        android:icon="@drawable/iconsheart"
        android:title="@string/health"/>
</menu>